--- a/notebooks/demo_protobuf.ipynb
+++ b/notebooks/demo_protobuf.ipynb
@@ -63,17 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting ../schema/person.proto\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile ../schema/person.proto\n",
     "syntax = \"proto3\";\n",
@@ -115,17 +107,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting ../person_protobuf_server.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile ../person_protobuf_server.py\n",
     "from concurrent import futures\n",
@@ -156,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,17 +153,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['daydreaming', 'hacking', 'coding']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def teach_course(stub, person, course):\n",
     "    person = stub.teachCourse(person_pb2.CourseRequest(person=person, course=course))\n",
@@ -199,6 +175,169 @@
    "metadata": {},
    "source": [
     "> Add a new field `grade` (0-100) with an appropriate type annotation to the `Person` message. Then, add a new method `assignGrade` to the `School` service that takes a `GradeRequest` message (which consists of a `Person` record and a `grade` arguments), assigns the `grade` to the `Person` and returns the `Person`. Then call the method by passing \"Martin\" `person` and a grade number, and print his grade."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ../schema/person.proto\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ../schema/person.proto\n",
+    "syntax = \"proto3\";\n",
+    "\n",
+    "message Person {\n",
+    "  string user_name = 1;\n",
+    "  optional int64 favorite_number = 2;\n",
+    "  repeated string interests = 3;\n",
+    "  optional int32 grade = 4;\n",
+    "}\n",
+    "\n",
+    "message CourseRequest {\n",
+    "  Person person = 1;\n",
+    "  string course = 2;\n",
+    "}\n",
+    "\n",
+    "message CoursesRequest {\n",
+    "  Person person = 1;\n",
+    "  repeated string courses = 2;\n",
+    "}\n",
+    "\n",
+    "message GradeRequest {\n",
+    "  Person person = 1;\n",
+    "  int32 grade = 2;\n",
+    "}\n",
+    "\n",
+    "service School {\n",
+    "  rpc teachCourse(CourseRequest) returns (Person) {}\n",
+    "  rpc teachCourses(CoursesRequest) returns (Person) {}\n",
+    "  rpc assignGrade(GradeRequest) returns (Person) {}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "python -m grpc_tools.protoc -I./schema --python_out=. --grpc_python_out=. ./schema/person.proto\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ../person_protobuf_server.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ../person_protobuf_server.py\n",
+    "import grpc\n",
+    "from concurrent import futures\n",
+    "\n",
+    "import person_pb2 as pb\n",
+    "import person_pb2_grpc as pb_grpc\n",
+    "\n",
+    "class School(pb_grpc.SchoolServicer):\n",
+    "    def teachCourse(self, request, context):\n",
+    "        person = pb.Person()\n",
+    "        person.CopyFrom(request.person)\n",
+    "        person.interests.append(request.course)\n",
+    "        return person\n",
+    "\n",
+    "    def teachCourses(self, request, context):\n",
+    "        person = pb.Person()\n",
+    "        person.CopyFrom(request.person)\n",
+    "        person.interests.extend(request.courses)\n",
+    "        return person\n",
+    "\n",
+    "    def assignGrade(self, request, context):\n",
+    "        person = pb.Person()\n",
+    "        person.CopyFrom(request.person)\n",
+    "        person.grade = request.grade  # 0–100\n",
+    "        return person\n",
+    "\n",
+    "def serve():\n",
+    "    server = grpc.server(futures.ThreadPoolExecutor(max_workers=4))\n",
+    "    pb_grpc.add_SchoolServicer_to_server(School(), server)\n",
+    "    server.add_insecure_port(\"[::]:50051\")\n",
+    "    server.start()\n",
+    "    print(\"gRPC server listening on :50051\")\n",
+    "    server.wait_for_termination()\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    serve()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "python person_protobuf_server.py\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Martin\n",
+      "Interests: ['Math', 'Science']\n",
+      "Grade: 95\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "import grpc\n",
+    "import person_pb2 as pb\n",
+    "import person_pb2_grpc as pb_grpc\n",
+    "\n",
+    "def run():\n",
+    "    # Connect to server\n",
+    "    channel = grpc.insecure_channel('localhost:50051')\n",
+    "    stub = pb_grpc.SchoolStub(channel)\n",
+    "\n",
+    "    # Create a Person object\n",
+    "    martin = pb.Person(\n",
+    "        user_name=\"Martin\",\n",
+    "        favorite_number=42,\n",
+    "        interests=[\"Math\", \"Science\"]\n",
+    "    )\n",
+    "\n",
+    "    # Call assignGrade RPC\n",
+    "    grade_request = pb.GradeRequest(\n",
+    "        person=martin,\n",
+    "        grade=95\n",
+    "    )\n",
+    "\n",
+    "    updated_person = stub.assignGrade(grade_request)\n",
+    "\n",
+    "    # Print result\n",
+    "    print(f\"Name: {updated_person.user_name}\")\n",
+    "    print(f\"Interests: {updated_person.interests}\")\n",
+    "    print(f\"Grade: {updated_person.grade}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    run()\n"
    ]
   }
  ],
