--- a/notebooks/demo_thrift.ipynb
+++ b/notebooks/demo_thrift.ipynb
@@ -84,17 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting ../schema/person.thrift\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile ../schema/person.thrift\n",
     "\n",
@@ -111,17 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting ../person_thrift_server.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile ../person_thrift_server.py\n",
     "import thriftpy2\n",
@@ -147,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,27 +156,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['daydreaming', 'hacking']"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "martin.interests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,20 +174,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['daydreaming', 'hacking', 'coding']"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "martin.interests"
    ]
@@ -226,6 +188,138 @@
     "> 1. Add a new field `grade` (0-100) with an appropriate type annotation to the `Person` struct. Then, add a new method `assignGrade` to the `School` service that takes a `Person` record and a `grade` arguments, assigns the `grade` to the `Person` and returns the `Person`. Then call the method by passing `martin` and a grade number, and print his grade.\n",
     ">\n",
     "> 2. Add a method `teachCourses` to School to add a list of courses instead of just one course. Then pass `martin` and a list of course-- `[\"cooking\", \"sewing\"]` to the method, and print his new interests."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ../schema/person.thrift\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ../schema/person.thrift\n",
+    "\n",
+    "struct Person {\n",
+    "  1: required string userName,\n",
+    "  2: optional i64 favoriteNumber,\n",
+    "  3: optional list<string> interests\n",
+    "  4: optional i32 grade // New field for grade (0-100)\n",
+    "}\n",
+    "\n",
+    "service School {\n",
+    "    Person teachCourse(1: required Person person, 2: required string course)\n",
+    "    Person teachCourses(1: required Person person, 2: required list<string> courses),\n",
+    "    Person assignGrade(1: required Person person, 2: required i32 grade)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Server implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ../person_thrift_server.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ../person_thrift_server.py\n",
+    "\n",
+    "import thriftpy2\n",
+    "person_thrift = thriftpy2.load(\"./schema/person.thrift\", module_name=\"person_thrift\")\n",
+    "\n",
+    "from thriftpy2.rpc import make_server\n",
+    "\n",
+    "class School(object):\n",
+    "    def teachCourse(self, person, course):\n",
+    "        person.interests.append(course)\n",
+    "        return person\n",
+    "\n",
+    "    def assignGrade(self, person, grade):\n",
+    "        # Assign the grade to the Person\n",
+    "        person.grade = grade\n",
+    "        return person\n",
+    "\n",
+    "    def teachCourses(self, person, courses):\n",
+    "        # Add the courses to the Person's interests\n",
+    "        person.interests.extend(courses)\n",
+    "        return person\n",
+    "\n",
+    "server = make_server(person_thrift.School, School(), client_timeout=None)\n",
+    "server.serve()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#client implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, run `python person_thrift_server.py` in a new terminal. This will start the server."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Martin's grade: 85\n",
+      "Martin's new interests: ['daydreaming', 'hacking', 'cooking', 'sewing']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import thriftpy2\n",
+    "person_thrift = thriftpy2.load(\"../schema/person.thrift\", module_name=\"person_thrift\")\n",
+    "\n",
+    "from thriftpy2.rpc import make_client\n",
+    "\n",
+    "# Create a client connection to the School service\n",
+    "school = make_client(person_thrift.School, timeout=None)\n",
+    "\n",
+    "# Create a Person instance\n",
+    "martin = person_thrift.Person(\n",
+    "    userName=\"Martin\",\n",
+    "    favoriteNumber=1337,\n",
+    "    interests=[\"daydreaming\", \"hacking\"]\n",
+    ")\n",
+    "\n",
+    "# Call assignGrade method\n",
+    "grade = 85\n",
+    "martin = school.assignGrade(martin, grade)\n",
+    "print(f\"Martin's grade: {martin.grade}\")\n",
+    "\n",
+    "# Call teachCourses method\n",
+    "courses = [\"cooking\", \"sewing\"]\n",
+    "martin = school.teachCourses(martin, courses)\n",
+    "print(f\"Martin's new interests: {martin.interests}\")"
    ]
   }
  ],
